2004-11-18  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>

	* gas/maxq10/call.d: Fix expected results now that bfd assembler
	support is enabled by default.
	* gas/maxq10/range.d: Likewise.
	* gas/maxq20/call.d: Likewise.

2004-11-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/arm/mapping.d: Expect F markers for Thumb code.
	* gas/arm/unwind.d: Update big-endian pattern.

2004-11-12  Nick Clifton  <nickc@redhat.com>

	* gas/mn10300/basic.exp: Add relax test.
	* gas/mn10300/relax.s: New test.
	* gas/mn10300/relax.d: Expected results.  Make sure that the
	correct size of instruction has been selected.

2004-11-11  Bob Wilson  <bob.wilson@acm.org>

	* gas/xtensa/short_branch_offset.s: New.
	* gas/xtensa/short_branch_offset.d: New.
	* gas/xtensa/all.exp: Run new test.

2004-11-10  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/opcode.s: Pad section.
	* gas/i386/intelok.s: Likewise.
	* gas/i386/opcode.d: Update.
	* gas/i386/intelok.d: Update.

2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* gas/maxq10: New directory.  Contains tests for maxq port.
	* gas/maxq20: Likewise.

2004-11-05  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/general.s: Add movzb.
	* gas/i386/general.l: Updated.

2004-11-04  Hans-Peter Nilsson  <hp@axis.com>

	* gas/all/gas.exp: Exclude float.s for crisv32-*-*.
	* gas/cris/operand-err-1.s (test.m constant): Remove xfail marker
	and update rationale.  Mark "ba [external_symbol]" and "ba [r3]"
	as invalid.
	* gas/ieee-fp/x930509a.exp: setup_xfail for crisv32-*-*.
	* gas/macros/macros.exp: setup_xfail strings for crisv32-*-*.
	* gas/cris/abs32-1.s, gas/cris/arch-err-1.s,
	gas/cris/arch-err-2.s, gas/cris/arch-err-3.s,
	gas/cris/arch-err-4.s, gas/cris/arch-err-5.s,
	gas/cris/bound-err-1.s, gas/cris/brokw-3b.s,
	gas/cris/march-err-1.s, gas/cris/march-err-2.s,
	gas/cris/push-err-1.s, gas/cris/push-err-2.s,
	gas/cris/pushpopv32.s, gas/cris/rd-abs32-1.d,